Updated the images

--- a/app/templates/album_detail.html
+++ b/app/templates/album_detail.html
@@ -22,9 +22,8 @@
             </h2> <!-- /.section-title -->
             <div class="underline blue"></div>    
             <div class="row">
-                
-                <div class="col-md-6 col-sm-12">
-                    <img src="{{album.album_image.url}}" alt="about" class="about-img">
+                <div class="col-xs-12 col-sm-12">
+                    <img src="{{album.album_image.url}}" alt="about" class="img-responsive">
                 </div> <!-- /.col-md-3 -->
             </div> <!-- /.row -->
             <div class="row">
