--- a/app/templates/artist_detail.html
+++ b/app/templates/artist_detail.html
@@ -23,8 +23,8 @@
             <div class="underline blue"></div>    
             <div class="row">
                 
-                <div class="col-md-6 col-sm-12">
-                    <img src="{{artist.artist_image.url}}" alt="about" class="about-img">
+                <div class="col-xs-12 col-sm-12">
+                    <img src="{{artist.artist_image.url}}" alt="about" class="img-responsive">
                 </div> <!-- /.col-md-3 -->
             </div> <!-- /.row -->
             <div class="row">
